@@ -51,6 +51,7 @@ OPENSEADRAGON CHANGELOG
 * Added support for HDPI (retina) displays (#583)
 * Corrected IIIF tile source to use canonical syntax (#586)
 * Fixed x/y typo that caused horizontal reference strip to be rendered only relative to height (#595)
+* Fixed Firefox 35 not able to open local files (#588)
 
 1.2.1:
 
